--- a/src/App.sass
+++ b/src/App.sass
@@ -9,3 +9,17 @@
 
 .d-flex
     margin-bottom: 20px
+
+    &__login
+        position: fixed
+        left: 0
+        top: 0
+        right: 0
+        bottom: 0
+        z-index: 1000
+
+        .card
+            min-width: 350px
+
+        button
+            min-width: 80px
